--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = [
     {name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com"},
 ]
 dependencies = [
-    "textual>=0.45.1",
+    "InquirerPy>=0.3.4",
+    "rich>=13.8.1",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
